<resources>
    <string name="app_name">Login-Try</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="si_no_tienes_una_cuenta">Si no tienes una cuenta</string>
    <string name="registrate">Registrate</string>
    <string name="icon">Icon</string>
    <string name="img01_girl_reading">Img01 Girl reading</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="back_icon">Back Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TuFrag_TextView_text">Explora por la ciudad</string>
    <string name="text_fragmenttuto">Planea tu recorrido como quieras</string>
    <string name="string_tutoritext">Guarda y comparte tus viajes</string>
    <string name="string_tutoributtonText">Comenzar</string>
    <string name="nombre_de_la_ruta">Nombre de la ruta</string>
    <string name="boton_guardar">boton_guardar</string>
    <string name="cerrar_btn">cerrar_btn</string>
    <string name="nombre1">Nombre</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="direccion">direccion</string>
    <string name="tiempo">tiempo</string>
    <string name="guarda_este_sitio_en_tus_rutas_favoritas">Guarda este sitio en tus rutas favoritas</string>
    <string name="guardar">Guardar</string>
    <string name="crea_ruta_nueva">Crea ruta nueva</string>
    <string name="c_mo_se_llamar_tu_nueva_ruta_favorita">¿Cómo se llamará tu nueva ruta favorita?</string>
    <string name="ingresa_un_nombre">Ingresa un nombre</string>
    <string name="guarda_tu_nueva_ruta">Guarda tu nueva ruta</string>
    <string name="nombre2">Nombre</string>
    <string name="precio1">Precio</string>
    <string name="descripcion1">Descripcion</string>
    <string name="direccion1">direccion</string>
    <string name="tiempo1">tiempo</string>
    <string name="a_d_nde_quieres_ir_hoy">¿A dónde quieres ir hoy?</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="museos">Museos</string>
    <string name="parques">Parques</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="historicos">Historicos</string>
    <string name="recreativos">Recreativos</string>
    <string name="tus_lugares_favoritos">Tus lugares favoritos</string>
    <string name="mis_rutas">MIS RUTAS</string>
    <string name="crea_alguna_ruta_para_comenzar">Crea alguna ruta para comenzar</string>
    <string name="iniciemos">¡Iniciemos!</string>
    <string name="generar_ruta_nueva">GENERAR RUTA NUEVA</string>
    <string name="generar_ruta">Generar Ruta</string>
    <string name="con_cu_nto_tiempo_dispone_en_horas">¿Con cuánto tiempo dispone? (en horas)</string>
    <string name="gastronom_a">Gastronomía</string>
    <string name="hist_ricos">Históricos</string>
    <string name="seleccione_los_lugares_que_gustar_a_visitar">Seleccione los lugares que gustaría visitar:</string>
    <string name="ingrese_el_nombre_de_la_ruta">Ingrese el nombre de la ruta</string>
    <string name="lugares">Lugares</string>
</resources>